# rcBK-RF

./: CMakeLists.txt  rcBK-RF-Model-module.ipynb  rcBK-RF-xList.ipynb  readme.me
src/: CMakeLists.txt  amplitudelib.cpp  amplitudelib.hpp  datafile.cpp  datafile.hpp  dipole_amplitude.cpp
